--- a/judge/templates/base.html
+++ b/judge/templates/base.html
@@ -11,13 +11,15 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Code:wght@400;600&display=swap" rel="stylesheet">
 
 
   <style>
     body {
       background: #0a1f44;
       color: #cbe7ff;
-      font-family: 'Inter', sans-serif;
+      {% comment %} font-family: 'Inter', sans-serif; {% endcomment %}
+      font-family: 'Fira Code', monospace;
     }
 
     .navbar-custom h3, .navbar-custom a {
